# mcp_socket_server

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docs/superpowers/plans/: 2026-07-08-protocol-foundation-and-read-tools.md
docs/superpowers/specs/: 2026-07-08-mcp-socket-server-phase1-design.md
src/mcp_socket_server/: __init__.py  __main__.py  audit.py  commands.py  config.py  locks.py  pool.py  registry.py  server.py  socket_client.py  transport.py
tests/: conftest.py  mock_socket_server.py  test_audit.py  test_commands.py  test_locks.py  test_mock_server.py  test_pool.py  test_registry.py  test_server_read_tools.py  test_socket_client.py  test_transport.py  test_write_tools.py
